# talks-redis-asyncio-message-bus

./: README.md  mypy.ini  pyproject.toml  readme_spanish.md  requester.pyr  requirements.txt  run.dev.sh
src/: main.py
stubs/aioredis/: __init__.pyi
