[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.git
    | \.mypy_cache
  )/
)
'''

[tool.poetry]
name = "message-bus"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
fastapi = ">=0.37.0"
uvicorn = ">=0.8.3"
aioredis = "^1.2"

[tool.poetry.dev-dependencies]
mypy = ">=0.720.0"
flake8 = ">=3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
